[package]
name = "sandglass"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/mibmo/sandglass"
description = "ASCII digital clock"

[dependencies]
chrono = "0.4.19"
crossterm = "0.19.0"
ctrlc = "3.1.8"
figlet-rs = "0.1.3"
lazy_static = "1.4.0"
